-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.9.0-beta1
-
None
-
f635af8908b865635326f828c2606a1e684f4510 (qt-creator/qt-creator/4.8)
int main() { int foo = 42; (void)foo; // BREAK HERE return 0; }
This line doesn't do anything, so the debugger moves the breakpoint to the following line. This somehow causes an infinite loop.
Log attached.
- relates to
-
QTCREATORBUG-21616 Creating a breakpoint on non-source line while debugger is running causes breakpoints to constantly be created
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-21611 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 247834,6 | GDB: Don't reset breakpoint when line numbers differ | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |